# axion

./: CMakeLists.txt  README.md
problem/: CMakeLists.txt
problem/include/: balancing_scale.hpp
problem/src/: balancing_scale.cpp  main.cpp
tests/: CMakeLists.txt  System.in  balancing_scale_tests.cpp
